--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "generate": "nuxt generate -m",
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore .",
     "lint:fix": "pnpm lint --fix",
-    "format": "prettier --write . --ignore-path ./.gitignore",
+    "format": "prettier --write ./**/*.{js,vue,ts,json} --ignore-path ./.gitignore",
     "postinstall": "is-ci || husky install"
   },
   "dependencies": {
