--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.6.5",
+    "gsap": "^3.7.1",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
