--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.6.5",
+    "gsap": "^3.7.1",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "fibers": "^5.0.0",
     "husky": "^7.0.2",
     "is-ci": "^3.0.0",
+    "nuxt-gsap-module": "^1.4.0",
     "nuxt-purge-icons-module": "^0.7.0",
     "nuxt-windicss": "^1.2.3",
     "prettier": "^2.1.2",
