--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "particlesjs": "^2.2.3"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.409",
+    "@iconify/vue": "^3.0.0",
     "@nuxt/types": "^2.14.6",
     "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
@@ -41,7 +43,6 @@
     "fibers": "^5.0.0",
     "husky": "^7.0.2",
     "is-ci": "^3.0.0",
-    "nuxt-fontawesome": "^0.4.0",
     "nuxt-gsap-module": "^1.4.0",
     "nuxt-purge-icons-module": "^0.7.0",
     "nuxt-windicss": "^1.2.3",
