Created portfolio page (#3)
- created a portfolio page
- particles added

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "postinstall": "is-ci || husky install"
   },
   "dependencies": {
-    "@iconify/iconify": "^2.0.1",
     "@nuxt/content": "^1.9.0",
     "@nuxt/image": "^0.6.0",
     "@nuxtjs/axios": "^5.12.2",
@@ -23,7 +22,9 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.6.5",
     "gsap": "^3.7.1",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "particles.js": "^2.0.0",
+    "particlesjs": "^2.2.3"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.412",
