Blog's Split App Added. (#7)
* Rendering Blogs Added

* Blog files Added

* Add YAML params to csoc21-frontend.md

* Change key to single word

* Add csoc backend blogs

* Add blogs from COPS website

* Blog Hierarchy Added

* Update frontend blogs

* Update Backend Blogs

* Bug Fixes And Time Stamp Added

* Link Cards Preview Added

* Added Blog Theme

* Create grid display

* Update SiteHero.vue

* Remove Loading Spinner from Cards

* Update SiteHero.vue

* single post update and markdown updated

* Updated links and added youtube i frame

* title animation

* Code Refractoring & Animations Added

Co-authored-by: Yash Prakash <yash2002109@gmail.com>
Co-authored-by: Tarun-Arora <tarun.arora.cse20@iitbhu.ac.in>
Co-authored-by: Devansh Mishra <79010144+devansh12b2@users.noreply.github.com>
Co-authored-by: lelouch-of-the-code <1aniruddhpatil.01@gmail.com>

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gsap": "^3.7.1",
     "nuxt": "^2.14.6",
     "particles.js": "^2.0.0",
-    "particlesjs": "^2.2.3"
+    "particlesjs": "^2.2.3",
+    "opti-image": "^0.10.0"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.418",
