Improved the portfolio page

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gsap": "^3.7.1",
     "nuxt": "^2.14.6",
     "opti-image": "^0.10.0",
-    "particles.js": "^2.0.0"
+    "particles.js": "^2.0.0",
+    "vue-lottie": "^0.2.1"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.418",
