fix: eslint issue fix add new config
add ignore for assets json
Signed-off-by: Lakshya Singh <lakshay.singh1108@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate -m",
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore .",
-    "lint:fix": "pnpm lint --fix",
-    "format": "prettier --write ./**/*.{js,vue,ts,json} --ignore-path ./.gitignore",
+    "format": "eslint --ext .js,.vue,.ts --ignore-path .gitignore . --fix",
     "postinstall": "is-ci || husky install"
   },
   "dependencies": {
