--- a/content/index/projectData.yml
+++ b/content/index/projectData.yml
@@ -14,7 +14,7 @@
   - name: Internship Portal
     i18n: google
     url: https://iit-intern-portal.herokuapp.com/
-    img: internportal.webp
+    img: tpcportal.webp
     desc: Intern Portal is a django-web application that helps the students of IIT BHU to land an internship in upcoming startups.
     tech:
       - JQuery
