chore: update deps and eslint support
enable windi analyze
update deps to latest
add typescript in eslint
Signed-off-by: Lakshya Singh <lakshay.singh1108@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           run_install: true
 
       - name: Build project 👨🏻‍💻
-        run: pnpm run generate
+        run: pnpm build
 
       - name: Run linter 👀
-        run: pnpm run lint
+        run: pnpm lint
