--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,4 @@
 
 [build]
   publish = "dist"
-  command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run generate"
+  command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm build"
