--- a/package.json
+++ b/package.json
@@ -4,48 +4,46 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build -m=client",
     "start": "nuxt start",
-    "generate": "nuxt generate -m",
+    "build": "nuxt generate -m",
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore .",
     "format": "eslint --ext .js,.vue,.ts --ignore-path .gitignore . --fix",
     "postinstall": "is-ci || husky install"
   },
   "dependencies": {
-    "@nuxt/content": "^1.9.0",
-    "@nuxt/image": "^0.6.0",
+    "@nuxt/content": "^1.15.1",
+    "@nuxt/image": "^0.6.2",
     "@nuxtjs/axios": "^5.12.2",
-    "@nuxtjs/composition-api": "^0.29.0",
+    "@nuxtjs/composition-api": "^0.29.3",
     "@nuxtjs/pwa": "^3.0.2",
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
-    "core-js": "^3.6.5",
-    "gsap": "^3.7.1",
-    "nuxt": "^2.14.6",
+    "core-js": "^3.21.1",
+    "nuxt": "^2.15.8",
     "opti-image": "^0.10.0",
     "particles.js": "^2.0.0",
     "vue-lottie": "^0.2.1"
   },
   "devDependencies": {
-    "@iconify/json": "^1.1.418",
+    "@iconify/json": "^1.1.461",
     "@nuxt/types": "^2.14.6",
     "@nuxt/typescript-build": "^2.0.3",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
-    "@vue/runtime-dom": "^3.2.11",
+    "@vue/runtime-dom": "^3.2.31",
     "eslint": "^7.10.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^7.6.0",
+    "eslint-plugin-vue": "^7.20.0",
     "eslint-plugin-vuejs-accessibility": "^0.7.1",
-    "husky": "^7.0.2",
-    "is-ci": "^3.0.0",
-    "nuxt-gsap-module": "^1.4.0",
+    "husky": "^7.0.4",
+    "is-ci": "^3.0.1",
+    "nuxt-gsap-module": "^1.6.0",
     "nuxt-purge-icons-module": "^0.7.0",
-    "nuxt-windicss": "^1.2.3",
+    "nuxt-windicss": "^2.2.5",
     "prettier": "^2.1.2",
-    "sass": "^1.35.2",
+    "sass": "1.49.8",
     "sass-loader": "^10.1.1",
     "unplugin-icons": "^0.12.16"
   },
