--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -154,7 +154,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/95632583?v=4",
       "profile": "https://github.com/soustab10",
       "contributions": [
-        "code"
+        "code",
+        "ideas"
       ]
     }
   ],
